--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
     "baseUrl": ".",
     "paths": {
       "@/root/*": ["./*"]
-    }
+    },
+    "incremental": true
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
