--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "12.1.5",
     "next-themes": "^0.1.1",
     "react": "18.1.0",
+    "react-component-export-image": "^1.0.6",
     "react-dom": "18.1.0",
     "react-icons": "^4.3.1"
   },
