--- a/package.json
+++ b/package.json
@@ -13,6 +13,14 @@
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,md}\" --config ./.prettierrc.js"
   },
   "dependencies": {
+    "@fontsource/josefin-sans": "^4.5.6",
+    "@fontsource/lato": "^4.5.5",
+    "@fontsource/open-sans": "^4.5.8",
+    "@fontsource/pt-sans": "^4.5.5",
+    "@fontsource/quicksand": "^4.5.6",
+    "@fontsource/source-code-pro": "^4.5.6",
+    "@fontsource/yellowtail": "^4.5.7",
+    "@fontsource/yeseva-one": "^4.5.5",
     "framer-motion": "^6.3.3",
     "next": "12.1.5",
     "next-themes": "^0.1.1",
