--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap --config ./next-sitemap.config.js",
     "start": "next start",
     "prepare": "husky install",
     "lint": "eslint \"**/*.{js,jsx,ts,tsx}\"",
@@ -24,6 +25,7 @@
     "framer-motion": "^6.3.3",
     "hero-patterns": "^2.1.0",
     "next": "12.1.5",
+    "next-seo": "^5.4.0",
     "next-themes": "^0.1.1",
     "preact": "^10.7.1",
     "react": "18.1.0",
@@ -34,6 +36,7 @@
   "devDependencies": {
     "@commitlint/cli": "^16.2.4",
     "@commitlint/config-conventional": "^16.2.4",
+    "@types/nprogress": "^0.2.0",
     "@types/react": "18.0.8",
     "@typescript-eslint/eslint-plugin": "^5.21.0",
     "@typescript-eslint/parser": "^5.21.0",
@@ -49,6 +52,7 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.4.1",
+    "next-sitemap": "^2.5.20",
     "postcss": "^8.4.12",
     "prettier": "^2.6.2",
     "pretty-quick": "^3.1.3",
