feat: font pairs added

--- a/package.json
+++ b/package.json
@@ -14,16 +14,44 @@
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,md}\" --config ./.prettierrc.js"
   },
   "dependencies": {
+    "@fontsource/abeezee": "^4.5.8",
+    "@fontsource/anton": "^4.5.7",
+    "@fontsource/bangers": "^4.5.7",
+    "@fontsource/copse": "^4.5.8",
+    "@fontsource/crimson-text": "^4.5.2",
+    "@fontsource/fjalla-one": "^4.5.7",
+    "@fontsource/fredoka-one": "^4.5.7",
+    "@fontsource/great-vibes": "^4.5.8",
+    "@fontsource/gudea": "^4.5.7",
     "@fontsource/josefin-sans": "^4.5.6",
     "@fontsource/lato": "^4.5.5",
+    "@fontsource/libre-baskerville": "^4.5.5",
+    "@fontsource/lora": "^4.5.6",
+    "@fontsource/merriweather": "^4.5.8",
+    "@fontsource/merriweather-sans": "^4.5.5",
+    "@fontsource/montserrat": "^4.5.7",
+    "@fontsource/mulish": "^4.5.7",
+    "@fontsource/noto-serif": "^4.5.7",
+    "@fontsource/nunito": "^4.5.8",
     "@fontsource/open-sans": "^4.5.8",
+    "@fontsource/open-sans-condensed": "^4.5.5",
+    "@fontsource/oswald": "^4.5.7",
+    "@fontsource/playfair-display": "^4.5.6",
+    "@fontsource/poppins": "^4.5.5",
     "@fontsource/pt-sans": "^4.5.5",
+    "@fontsource/quattrocento-sans": "^4.5.5",
     "@fontsource/quicksand": "^4.5.6",
+    "@fontsource/raleway": "^4.5.5",
+    "@fontsource/roboto": "^4.5.5",
+    "@fontsource/roboto-mono": "^4.5.7",
+    "@fontsource/rubik": "^4.5.6",
     "@fontsource/source-code-pro": "^4.5.6",
+    "@fontsource/source-sans-pro": "^4.5.6",
+    "@fontsource/space-mono": "^4.5.5",
+    "@fontsource/teko": "^4.5.5",
     "@fontsource/yellowtail": "^4.5.7",
     "@fontsource/yeseva-one": "^4.5.5",
     "framer-motion": "^6.3.3",
-    "hero-patterns": "^2.1.0",
     "next": "12.1.5",
     "next-seo": "^5.4.0",
     "next-themes": "^0.1.1",
