refactor: primary font added from package

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@fontsource/merriweather": "^4.5.8",
     "@fontsource/merriweather-sans": "^4.5.5",
     "@fontsource/montserrat": "^4.5.7",
+    "@fontsource/montserrat-alternates": "^4.5.5",
     "@fontsource/mulish": "^4.5.7",
     "@fontsource/noto-serif": "^4.5.7",
     "@fontsource/nunito": "^4.5.8",
